--- a/skin/frontend/mango/default/scss/Pages/Product/_product.scss
+++ b/skin/frontend/mango/default/scss/Pages/Product/_product.scss
@@ -430,8 +430,4 @@
 		}
 	}
 
-	.breadcrumbs{
-		margin:20px 0px;
-	}
-
 }
