--- a/skin/frontend/mango/default/scss/_components.scss
+++ b/skin/frontend/mango/default/scss/_components.scss
@@ -122,6 +122,6 @@ button{
 // ----- TABLET
 @include breakpoint($tablet-breakpoint){
 	.breadcrumbs{
-		margin:40px 0px 10px 10px;
+		margin:20px 0px 20px 0px;
 	}	
 }
